Fix gap in hover radius

--- a/usync_homepage/frontend/src/Home.module.css
+++ b/usync_homepage/frontend/src/Home.module.css
@@ -108,8 +108,8 @@ body {
 }
 
 .backgroundImages img:hover {
-  box-shadow: 0 0 .625rem .188rem rgba(153, 102, 255, 0.8);
-}s
+  box-shadow: 0 0 1.563rem .188rem rgba(153, 102, 255, 0.8);
+}
 
 .underline {
   width: 100%;
