--- a/usync_homepage/frontend/src/pages/game_pages/Game.css
+++ b/usync_homepage/frontend/src/pages/game_pages/Game.css
@@ -10,11 +10,19 @@
     margin: 1% auto; 
     height: auto;
     transition: box-shadow 0.3s ease-in-out;
-    border-radius: .9rem;
-  } 
+    border-radius: 1.563rem;
+  }
+  
+  .blockimg-coming-soon {
+    width: 100%;
+    margin: 1% auto; 
+    height: auto;
+    transition: box-shadow 0.3s ease-in-out;
+    border-radius: 1.563rem;
+  }
   
   .blockimg:hover{
-    box-shadow: 0 0 .625rem .188rem rgba(153, 102, 255, 0.8);
+    box-shadow: 0 0 1.563rem .188rem rgba(153, 102, 255, 0.8);
   }
 
   @media only screen and (min-width: 992px) {
